# lithium

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml
assets/: README.md
lithium/: __main__.py  lithium.py
